--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://cbovis@github.com/cbovis/zrx-tracker-event-extractor.git"
   },
   "author": "Craig Bovis",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/cbovis/zrx-tracker-event-extractor/issues"
   },
