--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "0x.js": "^0.38.6",
     "bluebird": "^3.5.1",
+    "bugsnag": "^2.4.3",
     "config": "^2.0.1",
     "delay": "^3.0.0",
     "dotenv-safe": "^6.0.0",
