--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "precommit": "lint-staged",
+    "start": "node .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
