--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   },
   "homepage": "https://github.com/cbovis/0x-event-extractor#readme",
   "dependencies": {
-    "0x.js": "^0.38.6",
-    "bluebird": "^3.5.1",
-    "bugsnag": "^2.4.3",
-    "config": "^2.0.1",
-    "delay": "^3.0.0",
-    "dotenv-safe": "^6.0.0",
-    "lodash": "^4.17.10",
-    "mongoose": "^5.2.4",
-    "promise-poller": "^1.6.0",
-    "rollbar": "^2.4.2",
-    "signale": "^1.2.1",
-    "web3": "^0.20.6"
+    "0x.js": "0.38.6",
+    "bluebird": "3.5.1",
+    "bugsnag": "2.4.3",
+    "config": "2.0.1",
+    "delay": "3.0.0",
+    "dotenv-safe": "6.0.0",
+    "lodash": "4.17.10",
+    "mongoose": "5.2.4",
+    "promise-poller": "1.6.0",
+    "rollbar": "2.4.2",
+    "signale": "1.2.1",
+    "web3": "0.20.6"
   },
   "devDependencies": {
     "eslint": "5.3.0",
