--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://cbovis@github.com/cbovis/0x-event-extractor.git"
   },
   "author": "Craig Bovis",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/cbovis/0x-event-extractor/issues"
   },
