--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-prettier": "2.6.2",
     "husky": "0.14.3",
     "jest": "23.5.0",
-    "license-checker": "^20.2.0",
+    "license-checker": "20.2.0",
     "lint-staged": "7.2.2",
     "prettier": "1.14.2"
   }
