--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NodeJS worker application built for 0x Tracker which extracts 0x fill events from the Ethereum blockchain and persists them to MongoDB.",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint:js": "eslint .",
+    "lint:licenses": "license-checker --onlyAllow \"MIT;ISC;BSD-2-Clause;Apache-2.0;LGPL-3.0;Unlicense;BSD-3-Clause;MPL-2.0;Public Domain;WTFPL;CC0-1.0;CC-BY-3.0;BSD*;BSD;Custom: https://secure.travis-ci.org/defunctzombie/node-uuid.png\" --summary",
     "precommit": "lint-staged",
     "start": "node .",
     "test": "jest",
@@ -18,7 +19,7 @@
     "url": "git+https://cbovis@github.com/cbovis/0x-event-extractor.git"
   },
   "author": "Craig Bovis",
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/cbovis/0x-event-extractor/issues"
   },
@@ -45,6 +46,7 @@
     "eslint-plugin-prettier": "2.6.2",
     "husky": "0.14.3",
     "jest": "23.5.0",
+    "license-checker": "20.2.0",
     "lint-staged": "7.2.2",
     "prettier": "1.14.2"
   }
