--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint .",
-    "precommit": "lint-staged",
     "start": "node .",
     "test": "jest",
     "test:watch": "jest --watch"
-  },
-  "lint-staged": {
-    "*.js": "eslint"
   },
   "repository": {
     "type": "git",
@@ -25,24 +21,24 @@
   "homepage": "https://github.com/cbovis/0x-event-extractor#readme",
   "dependencies": {
     "0x.js": "0.38.6",
-    "bluebird": "^3.5.2",
+    "bluebird": "3.5.2",
     "bugsnag": "2.4.3",
     "config": "2.0.1",
-    "delay": "^4.0.1",
+    "delay": "4.0.1",
     "dotenv-safe": "6.0.0",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.2.16",
+    "lodash": "4.17.11",
+    "mongoose": "5.3.0",
     "promise-poller": "1.6.0",
-    "signale": "^1.3.0",
+    "signale": "1.3.0",
     "web3": "0.20.7"
   },
   "devDependencies": {
-    "eslint": "5.6.0",
+    "eslint": "5.6.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-prettier": "2.7.0",
-    "husky": "0.14.3",
+    "eslint-plugin-prettier": "3.0.0",
+    "husky": "1.0.1",
     "jest": "23.6.0",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3"
