--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/cbovis/0x-event-extractor#readme",
   "dependencies": {
     "0x.js": "1.0.7",
-    "bluebird": "3.5.2",
+    "@0xproject/subproviders": "2.0.6",
+    "@0xproject/web3-wrapper": "3.0.2",
     "bugsnag": "2.4.3",
     "config": "2.0.1",
     "delay": "4.0.1",
@@ -29,8 +30,7 @@
     "lodash": "4.17.11",
     "mongoose": "5.3.0",
     "promise-poller": "1.6.0",
-    "signale": "1.3.0",
-    "web3": "0.20.7"
+    "signale": "1.3.0"
   },
   "devDependencies": {
     "eslint": "5.6.1",
