--- a/package.json
+++ b/package.json
@@ -9,25 +9,18 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://cbovis@github.com/cbovis/0x-event-extractor.git"
-  },
+  "repository": "https://github.com/0xTracker/0x-event-extractor",
   "author": "Craig Bovis",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/cbovis/0x-event-extractor/issues"
-  },
-  "homepage": "https://github.com/cbovis/0x-event-extractor#readme",
   "dependencies": {
     "0x.js": "0.38.6",
     "bluebird": "3.5.2",
     "bugsnag": "2.4.3",
     "config": "2.0.1",
-    "delay": "4.0.1",
-    "dotenv-safe": "6.0.0",
+    "delay": "4.1.0",
+    "dotenv-safe": "6.1.0",
     "lodash": "4.17.11",
-    "mongoose": "5.3.1",
+    "mongoose": "5.3.4",
     "promise-poller": "1.6.0",
     "signale": "1.3.0",
     "web3": "0.20.7"
