--- a/renovate.json
+++ b/renovate.json
@@ -5,16 +5,17 @@
   "rebaseStalePrs": true,
   "packageRules": [
     {
-      "packageNames": ["husky", "lint-staged", "prettier"],
-      "packagePatterns": ["^eslint"],
-      "groupName": "linting packages",
-      "automerge": true,
-      "major": {
-        "automerge": false
-      }
+      "packageNames": ["lint-staged", "husky"],
+      "groupName": "dev environment packages"
     },
     {
-      "packageNames": ["jest"],
+      "packageNames": ["prettier"],
+      "packagePatterns": ["^eslint"],
+      "groupName": "linting packages",
+      "automerge": true
+    },
+    {
+      "packagePatterns": ["^jest"],
       "groupName": "testing packages",
       "automerge": true
     }
