--- a/renovate.json
+++ b/renovate.json
@@ -1,23 +1,4 @@
 {
   "baseBranches": ["master", "master-v2"],
-  "extends": ["config:base"],
-  "prHourlyLimit": 0,
-  "rebaseStalePrs": true,
-  "packageRules": [
-    {
-      "packageNames": ["lint-staged", "husky"],
-      "groupName": "dev environment packages"
-    },
-    {
-      "packageNames": ["prettier"],
-      "packagePatterns": ["^eslint"],
-      "groupName": "linting packages",
-      "automerge": true
-    },
-    {
-      "packagePatterns": ["^jest"],
-      "groupName": "testing packages",
-      "automerge": true
-    }
-  ]
+  "extends": ["github>0xTracker/0x-tracker-renovate-config"]
 }
