--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "jest": "24.4.0",
     "lint-staged": "8.1.1",
     "prettier": "1.16.4"
+  },
+  "engines": {
+    "node": "8.15.1",
+    "npm": "6.x.x"
   }
 }
