--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "0x.js": "1.0.7",
-    "@0xproject/subproviders": "2.0.6",
-    "@0xproject/web3-wrapper": "3.0.2",
+    "@0x/contract-wrappers": "8.0.3",
+    "@0x/subproviders": "4.0.2",
+    "@0x/web3-wrapper": "6.0.2",
     "bugsnag": "2.4.3",
     "config": "3.0.1",
     "delay": "4.1.0",
