--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "0x.js": "0.38.6",
+    "@0x/subproviders": "4.0.2",
+    "@0x/web3-wrapper": "6.0.2",
     "bluebird": "3.5.3",
     "bugsnag": "2.4.3",
     "config": "3.0.1",
@@ -22,8 +24,7 @@
     "lodash": "4.17.11",
     "mongoose": "5.4.5",
     "promise-poller": "1.7.0",
-    "signale": "1.3.0",
-    "web3": "0.20.7"
+    "signale": "1.3.0"
   },
   "devDependencies": {
     "eslint": "5.15.2",
