--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 CONNECTION_STRING=mongodb://localhost:27017/zrx-tracker
-INFURA_API_KEY=
 NODE_ENV=development
+WEB3_ENDPOINT=https://cloudflare-eth.com
