--- a/package.json
+++ b/package.json
@@ -2,30 +2,16 @@
   "name": "0x-event-extractor",
   "version": "1.0.0",
   "description": "NodeJS worker application built for 0x Tracker which extracts 0x fill events from the Ethereum blockchain and persists them to MongoDB.",
-  "main": "src/index.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "node .",
+    "start": "node packages/core/src",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "repository": "https://github.com/0xTracker/0x-event-extractor",
   "author": "Craig Bovis",
   "license": "Apache-2.0",
-  "dependencies": {
-    "0x.js": "0.38.6",
-    "@0x/subproviders": "4.0.2",
-    "@0x/web3-wrapper": "6.0.2",
-    "bluebird": "3.5.3",
-    "bugsnag": "2.4.3",
-    "config": "3.0.1",
-    "delay": "4.1.0",
-    "dotenv-safe": "6.1.0",
-    "lodash": "4.17.11",
-    "mongoose": "5.4.5",
-    "promise-poller": "1.7.0",
-    "signale": "1.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "6.0.0",
     "eslint-config-airbnb-base": "14.0.0",
@@ -34,6 +20,7 @@
     "eslint-plugin-prettier": "3.1.0",
     "husky": "1.3.1",
     "jest": "24.9.0",
+    "lerna": "^3.16.4",
     "lint-staged": "8.1.1",
     "prettier": "1.17.1"
   },
