--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "@0x-event-extractor/extractor-v2",
+  "name": "@0x-event-extractor/shared",
   "version": "0.0.0",
   "author": "Craig Bovis <craig@bovis.me.uk>",
+  "homepage": "https://github.com/0xTracker/0x-event-extractor#readme",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": {
@@ -12,7 +13,7 @@
     "url": "https://github.com/0xTracker/0x-event-extractor/issues"
   },
   "dependencies": {
-    "@0x-event-extractor/shared": "^0.0.0",
-    "@0x/contract-wrappers": "^12.1.0"
+    "@0x/subproviders": "^5.0.4",
+    "@0x/web3-wrapper": "^6.0.13"
   }
 }
