--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,26 +1,13 @@
 {
   "name": "@0x-event-extractor/core",
   "version": "1.0.0",
-  "author": "Craig Bovis <craig@bovis.me.uk>",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0xTracker/0x-event-extractor.git"
-  },
-  "scripts": {
-    "start": "node src"
-  },
-  "bugs": {
-    "url": "https://github.com/0xTracker/0x-event-extractor/issues"
-  },
+  "main": "src/index.js",
   "dependencies": {
     "@0x-event-extractor/extractor-v1": "^1.0.0",
     "@0x-event-extractor/extractor-v2": "^1.0.0",
     "@0x-event-extractor/shared": "^1.0.0",
     "bugsnag": "^2.4.3",
-    "config": "^3.2.2",
     "delay": "^4.3.0",
-    "dotenv-safe": "^8.1.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
     "promise-poller": "^1.9.1",
