Move some config to environment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 CONNECTION_STRING=mongodb://localhost:27017/zrx-tracker
 NODE_ENV=development
 WEB3_ENDPOINT=https://cloudflare-eth.com
+MAX_CHUNK_SIZE=10000
+POLLING_INTERVAL=30000
