--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@0x/subproviders": "^5.0.4",
+    "@0x/utils": "^4.5.2",
     "@0x/web3-wrapper": "^6.0.13",
     "lodash": "^4.17.15"
   }
