Remove cloudflare from .env example

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ CONNECTION_STRING=mongodb://localhost:27017/zrx-tracker
 MAX_CHUNK_SIZE=10000
 NODE_ENV=development
 POLLING_INTERVAL=30000
-WEB3_ENDPOINT=https://cloudflare-eth.com
+WEB3_ENDPOINT=
