--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "engines": {
     "node": "10.16.3",
-    "npm": "6.x.x"
+    "yarn": "1.19.0"
   },
   "private": true,
   "workspaces": [
