Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ branches:
     - master
 language: node_js
 cache:
+  yarn: true
   directories:
-    - 'node_modules'
-install: npm install
+    - node_modules
+install: yarn install
 script:
-  - npm run lint
+  - yarn run lint
