--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ cache:
   yarn: true
   directories:
     - node_modules
+before_install:
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn=1.19.0-1
 install: yarn install
 script:
   - yarn run lint
