--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
   - sudo apt-get update -qq
   - sudo apt-get install -y -qq yarn=1.19.0-1
+  - export PATH="$HOME/.yarn/bin:$PATH"
 install: yarn install
 script:
   - yarn run lint
