Refactor project into a monorepo (#295)
* Create basic monorepo structure

* Make a bit more progress on refactoring

* Refactor entry point

* Bootstrap lerna post-install

* Tweak versions

* Further refactoring

* Refactor block range code and add comments

* Move bootstrapping to root

* Move some config to environment

* Fix up a few issues in V1 extractor

* Update V2 genesis block for V2.1

* Fix issues in the V2 extractor

* Ensure 0x.js doesn't make redundant calls

* Ignore lerna logs in git

* Remove master-v2 branch from renovate config

* Sort .env examples

* Add comment

* Use transactions for persistence

* Remove cloudflare from .env example

* Update to latest Node LTS

* Add heroko post build script

* Integrate with Yarn workspaces

* Update README

* Remove redundant lockfiles

* Remove redundant lerna config

* Set yarn version in package.json

* Update README

* Update travis config

* Ensure travis uses latest version of Yarn

* Update travis config

* Use hosted shell script to install Yarn

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ branches:
     - master
 language: node_js
 cache:
+  yarn: true
   directories:
-    - 'node_modules'
-install: npm install
+    - node_modules
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
+install: yarn install
 script:
-  - npm run lint
+  - yarn run lint
