--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 CONNECTION_STRING=mongodb://localhost:27017/zrx-tracker
-INFURA_API_KEY=
+MAX_CHUNK_SIZE=10000
 NODE_ENV=development
+POLLING_INTERVAL=30000
+WEB3_ENDPOINT=
