Increase job runner resiliency

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 CONNECTION_STRING=mongodb://localhost:27017/zrx-tracker
 MAX_CHUNK_SIZE=10000
+MAX_POLLING_INTERVAL=300000
+MIN_POLLING_INTERVAL=30000
 NODE_ENV=development
-POLLING_INTERVAL=30000
 WEB3_ENDPOINT=
