--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,5 +1,6 @@
 BUGSNAG_TOKEN=
 CONNECTION_STRING=
 MAX_CHUNK_SIZE=10000
-POLLING_INTERVAL=30000
+MAX_POLLING_INTVERAL=300000
+MIN_POLLING_INTERVAL=30000
 WEB3_ENDPOINT=
