--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ deploy:
   access_key_id: $AWS_DEPLOY_ACCESS_KEY_ID
   secret_access_key: $AWS_DEPLOY_SECRET_ACCESS_KEY
   region: $AWS_DEPLOY_REGION
-  app: "0x Event Extractor"
+  app: $AWS_DEPLOY_APP_NAME
   env: $AWS_DEPLOY_ENV
-  bucket_name: $AWS_DEPLOY_BUCKET_NAME
+  bucket: $AWS_DEPLOY_BUCKET_NAME
+  edge: true
+  wait_until_deployed: true
   on:
     branch: master
