--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv-safe": "8.1.0"
   },
   "devDependencies": {
+    "eb-disable-npm": "1.0.1",
     "eslint": "6.7.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-prettier": "6.7.0",
