--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@0x-event-extractor/extractor-v1": "^1.0.0",
     "@0x-event-extractor/extractor-v2": "^1.0.0",
+    "@0x-event-extractor/extractor-v3": "^1.0.0",
     "@0x-event-extractor/shared": "^1.0.0",
     "bugsnag": "^2.4.3",
     "delay": "^4.3.0",
