--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,8 @@
     "delay": "^4.3.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.3",
-    "promise-poller": "^1.9.1",
-    "signale": "^1.4.0"
+    "pino": "6.0.0",
+    "pino-elasticsearch": "4.4.0",
+    "promise-poller": "^1.9.1"
   }
 }
