Restructure event extractor for extensibility

--- a/packages/extractor-v1/package.json
+++ b/packages/extractor-v1/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@0x-event-extractor/extractor-v1",
+  "description": "Extractor for v1 LogFill events",
   "version": "1.0.0",
   "main": "src/index.js",
   "dependencies": {
