--- a/packages/extractor-v2/package.json
+++ b/packages/extractor-v2/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@0x-event-extractor/extractor-v2",
+  "description": "Extractor for v2 Fill events",
   "version": "1.0.0",
   "main": "src/index.js",
   "dependencies": {
