--- a/packages/fill-extractor-v1/package.json
+++ b/packages/fill-extractor-v1/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@0x-event-extractor/extractor-v1",
-  "description": "Extractor for v1 LogFill events",
+  "name": "@0x-event-extractor/fill-extractor-v1",
+  "description": "Extractor for v1 fill events",
   "version": "1.0.0",
   "main": "src/index.js",
   "dependencies": {
