--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
     "@0x-event-extractor/fill-extractor-v2": "^1.0.0",
     "@0x-event-extractor/fill-extractor-v3": "^1.0.0",
     "@0x-event-extractor/shared": "^1.0.0",
+    "@0x-event-extractor/sushiswap-swap-extractor": "^1.0.0",
     "@0x-event-extractor/transformed-erc20-extractor": "^1.0.0",
     "@0x-event-extractor/uniswap-v2-swap-extractor": "^1.0.0",
     "@bugsnag/js": "6.5.2",
