--- a/packages/rfq-order-filled-extractor/package.json
+++ b/packages/rfq-order-filled-extractor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@0x-event-extractor/rfq-order-filled-extractor",
-  "description": "Extractor for RFQ order fill events",
+  "description": "Extractor for RfqOrderFilled events",
   "version": "1.0.0",
   "main": "src/index.js",
   "dependencies": {
